name:                CFG-fuzzer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ayberkt/CFG-Fuzzer#readme
license:             BSD3
license-file:        LICENSE
author:              Ayberk Tosun
maintainer:          ayberk.tosun@gmail.com
copyright:           Ayberk Tosun 2015
category:            Formal languages
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Language.Grammar
  build-depends:       base >= 4.7 && < 5
                     , random
  default-language:    Haskell2010

executable palindromes
  hs-source-dirs:      palindromes
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random
                     , CFG-fuzzer
  default-language:    Haskell2010

executable arithmetic
  hs-source-dirs:      arithmetic
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , random
                     , CFG-fuzzer
  default-language:    Haskell2010


test-suite CFG-fuzzer-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , CFG-fuzzer
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ayberkt/CFG-fuzzer
